<?xml version="1.0"?>
<package>
  <name>luh_youbot_msgs</name>
  <version>1.0.0</version>
  <description>This package contains all message, service and action definitions.</description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
