<package>
    <name>luh_youbot_os</name>
    <version>1.0.0</version>
    <description>
        The luh_youbot_os repository provides a software development kit 
        for applications with the KUKA youBot. 
    </description>
    <maintainer email="info@luhbots.de">Simon Aden</maintainer>

    <license>BSD</license>  

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>luh_laser_watchdog</run_depend>
    <run_depend>luh_youbot_calibration</run_depend>
    <run_depend>luh_youbot_controller</run_depend>
    <run_depend>luh_youbot_controller_api</run_depend>
    <run_depend>luh_youbot_description</run_depend>
    <run_depend>luh_youbot_driver_api</run_depend>
    <run_depend>luh_youbot_gazebo</run_depend>
    <run_depend>luh_youbot_gripper</run_depend>
    <run_depend>luh_youbot_gui</run_depend>
    <run_depend>luh_youbot_joy_teleop</run_depend>
    <run_depend>luh_youbot_kinematics</run_depend>
    <run_depend>luh_youbot_msgs</run_depend>
    <run_depend>luh_youbot_poses</run_depend>
    <run_depend>luh_youbot_vrep_api</run_depend>
    <run_depend>youbot_driver</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
