<?xml version="1.0"?>
<package>
  <name>luh_youbot_poses</name>
  <version>1.0.0</version>
  <description>This package contains some predefined poses and a library with which pose definition files can be read.</description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>luh_youbot_kinematics</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>luh_youbot_kinematics</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
