<?xml version="1.0"?>
<package>
  <name>youbot_description</name>
  <version>0.0.0</version>
  <description>The youbot_description package</description>
  <author>Alexey Zakharov, Sebastian Blumenthal</author>
  <license>LGPL, BSD</license>
  <maintainer email="info@luhbots.de">LUHbots</maintainer>
  <license>LGPL, BSD</license>
  <url>http://ros.org/wiki/youbot_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
